# WebCourse

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: web.yml
data/shaders/: FragmentShader.glsl  FragmentShader.glsl.txt  VertexShader.glsl
shaders/: FragmentShader.glsl  VertexShader.glsl  loadShader.cpp
src/: Camera.cppm  Camera.hpp  Camera.ixx  Model.cppm  Presenter.cppm  Presenter.ixx  Types.cppm  Types.ixx  View.cppm  View.ixx  cube.hpp  loadShader.cpp
